--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <h1>📄 Política de Privacidade e Termos de Uso — Uber Report</h1>
-  <p><strong>Última atualização:</strong> 01 de maio de 2025</p>
+  <p><strong>Última atualização:</strong> 01 de maio de 2025.</p>
 
   <div class="section">
     <h2>1. Sobre o Uber Report</h2>
@@ -52,12 +52,12 @@
   </div>
 
   <div class="section">
-    <h2>2. Coleta e uso de dados</h2>
+    <h2>2. Coleta, uso e permissões de dados</h2>
     <p>
       O Uber Report <strong>não armazena dados pessoais</strong> dos usuários em servidores próprios. No entanto, para funcionamento adequado, o app solicita algumas permissões temporárias:
     </p>
     <ul>
-      <li><strong> 📍 Localização:</strong> usada para exibir sua posição no mapa e mostrar alertas próximos. A localização <strong>não é armazenada</strong>.</li>
+      <li><strong> 📍 Localização:</strong> usada para exibir sua posição no mapa e mostrar alertas próximos.</li>
       <li><strong> 🌐 Internet:</strong> necessária para carregar mapas, alertas e rotas.</li>
       <li><strong> 📤 WhatsApp:</strong> usado apenas para enviar mensagens para contatos de confiança. Nenhum dado é coletado.</li>
     </ul>
@@ -71,31 +71,21 @@
   </div>
 
   <div class="section">
-    <h2>4. Permissões exigidas</h2>
-    <p>O aplicativo pode solicitar as seguintes permissões:</p>
-    <ul>
-      <li><strong>Localização:</strong> para exibir no mapa sua posição e alertas.</li>
-      <li><strong>Internet:</strong> para carregar conteúdos em tempo real.</li>
-      <li><strong>WhatsApp:</strong> para envio de mensagens de emergência.</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>5. Idade mínima</h2>
+    <h2>4. Idade mínima</h2>
     <p>
-      O uso do Uber Report é indicado para usuários com <strong>18 anos ou mais</strong>, dado o conteúdo sensível e responsabilidade envolvida no uso dos alertas.
+      O uso do Uber Report é indicado para usuários com <strong>18 anos ou mais</strong>, dado o conteúdo e responsabilidades envolvidas no uso dos alertas.
     </p>
   </div>
 
   <div class="section">
-    <h2>6. Segurança</h2>
+    <h2>5. Segurança</h2>
     <p>
       O Uber Report é uma <em>ferramenta de apoio</em> e não substitui medidas de segurança pessoal. Não garantimos a prevenção total de incidentes.
     </p>
   </div>
 
   <div class="section">
-    <h2>7. Responsabilidade do usuário</h2>
+    <h2>6. Responsabilidade do usuário</h2>
     <p>Ao utilizar o app, o usuário concorda em:</p>
     <ul>
       <li>Utilizar os recursos com responsabilidade.</li>
@@ -105,14 +95,14 @@
   </div>
 
   <div class="section">
-    <h2>8. Alterações nesta política</h2>
+    <h2>7. Alterações nesta política</h2>
     <p>
       Esta política pode ser atualizada a qualquer momento. Recomendamos que os usuários revisem esta página periodicamente para se manterem informados.
     </p>
   </div>
 
   <div class="section">
-    <h2>9. Contato</h2>
+    <h2>8. Contato</h2>
     <p>
       Em caso de dúvidas, sugestões ou solicitações, entre em contato pelo e-mail:
       <br />
