Alterando tamanho e centralização

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 </head>
 <body>
   <h1>📄 Política de Privacidade e Termos de Uso — Uber Report</h1>
-  <img src="icon.png" alt="Banner do Uber Report" style="width: 100%; max-width: 800px; margin-bottom: 20px; border-radius: 12px;" />
+  
+  <div style="text-align: center; margin-bottom: 20px;">
+  <img src="banner.png" alt="Banner do Uber Report" style="width: 100%; max-width: 400px; border-radius: 12px;" />
+</div>
+  
   <p><strong>Última atualização:</strong> 01 de maio de 2025.</p>
 
   <div class="section">
